<resources>
    <string name="app_name">toDo</string>
    <string name="email">Email</string>
    <string name="emailinvalido">Email Invalido</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrargoogle">Entrar com o Google</string>
    <string name="registrargoogle">Registrar com o Google</string>
    <string name="ou">OU</string>
    <string name="registrar">REGISTRAR</string>
    <string name="listatarefa">Lista de Tarefas</string>
    <string name="adcionar">Adcionar</string>
    <string name="deletar">Deletar</string>
    <string name="limpar">Limpar</string>
    <string name="minhastarefas">Minhas Tarefas</string>
    <string name="nolist">Lista Vazia</string>
    <string name="notextlist">Campo descritivo de lista esta em branco</string>
    <string name="taskList">Tarefa ja existe na lista</string>
    <string name="register">Registrar</string>
    <string name="senhacofirma">Confirma Senha</string>
    <string name="id_client_web">937577610117-36n6cjjbhfj1j18ji5ndt9rq34j43r1r.apps.googleusercontent.com</string>
    <string name="loginsucesso">Logado com Sucesso</string>
    <string name="loginsemsucesso">Falha ao Logar</string>
    <string name="senhasNoIdentica">As Senhas são diferentes</string>
    <string name="senhas6">Senha deve ter no minimo 8 digitos</string>
    <string name="imformecampos">Preencha todos os campos</string>
    <string name="userCreate">Usuario Criado Com Sucesso, Verifique sua caixa de Email</string>
    <string name="userExist">Usuario ja cadastrado</string>
    <string name="errorcreatuser">Erro ao criar usuario</string>
    <string name="emailSend">Email enviado com sucesso</string>
    <string name="emailNovalid">Email não validado</string>
    <string name="perfil">Perfil</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="atualizar_perfil">ATUALIZAR PERFIL</string>
    <string name="tarefa">Tarefa</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descrição</string>
    <string name="data">DATA</string>
    <string name="hora">HORA</string>
    <string name="salvar">Salvar</string>
    <string name="msg_save">Registro Salvo Com Sucesso</string>
    <string name="erro_registro">Erro ao atualizar registro</string>
    <string name="erro_escolher_foto">Erro ao escolher foto</string>
    <string name="profilefoto">Escolha a foto</string>
    <string name="escolhaopcoes">Qual das fotos você deseja alterar?</string>
    <string name="atualizar_capa">Atualizar Capa</string>
    <string name="falhasaveimg">Falha ao salvar image</string>
    <string name="imagesavesucess">Imagem salva com sucesso</string>
    <string name="falhaloadimgperfil">Falha ao carregar imagem de perfil</string>
    <string name="falhaloadimgperfilfundo">Falha ao carregar imagem de perfil de fundo</string>
    <string name="lembrarSenha">Esqueci minha senha</string>
    <string name="recuperar">Recuperar</string>
    <string name="voltar">Voltar</string>
    <string name="senhafraca">Senha Muito Fraca</string>
    <string name="alterarsenha">Alterar Senha</string>
    <string name="senhaalterada">Senha alterada com sucesso</string>
</resources>