<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rectangle_2012" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/sair" />

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@color/LightSkyBlue"
            android:src="@drawable/folders"
            android:tint="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/img_perfil"
            app:layout_anchorGravity="bottom|start"
            app:layout_constraintEnd_toEndOf="@+id/img_perfil"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="280dp"
            android:backgroundTint="@color/LightSkyBlue"
            android:src="@drawable/photo_camera"
            android:tint="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/img_perfil"
            app:layout_anchorGravity="bottom|start"
            app:layout_constraintEnd_toEndOf="@+id/img_perfil"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/img_perfil"
            tools:layout_editor_absoluteX="92dp" />

        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edt_sobre_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sobrenome"

            app:layout_constraintTop_toBottomOf="@+id/edt_nome"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atualizar_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_sobre_nome" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>